--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/TEAMREDSoldier/Mind_Games/issues"
   },
-  "homepage": "https://github.com/TEAMREDSoldier/Mind_Games#readme"
+  "homepage": "https://github.com/TEAMREDSoldier/Mind_Games#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
